# web_api_gateway

./: .env  .gitignore  Cargo.toml  Todo.md  build.rs  common  sqlx.toml
docker/: Dockerfile  docker-compose.yaml  init.sql
migrations/: 20211224070505_1.down.sql  20211224070505_1.up.sql
src/: main.rs
src/auth/: handler.rs  json.rs  mod.rs  repo.rs  route.rs
src/auth/handlers/: mod.rs  v1.rs
src/auth/json/: claims.rs  mod.rs
src/core/: config.rs  environment.rs  error.rs  middleware.rs  mod.rs  recover.rs  util.rs
src/core/middlewares/: authorization.rs  mod.rs
src/customer/: json.rs  mod.rs  routes.rs
src/customer/handlers/: v1.rs
src/product/: json.rs
src/proxy/: route.rs
src/user/: handler.rs  json.rs  mod.rs  repo.rs  role.rs  route.rs
src/user/handlers/: v1.rs
src/user/json/: mod.rs  request.rs  table.rs  user.rs
src/utils/: alias.rs  env.rs  mod.rs  recover.rs
src/utils/middlewares/: mod.rs  with_env.rs
