[package]
name = "web_api_gateway"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.warp]
version = "0.3.2"
features = ["tokio-rustls", "compression-gzip", "websocket"]

[dependencies.serde]
version = "1.0.132"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.9"
features = ["runtime-tokio-rustls", "all-types"]

[dependencies.chrono]
version = "0.4.19"

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]