[package]
name = "web_api_gateway"
version = "0.1.0"
edition = "2021"
authors = ["boris <boris.lok.tw@outlook.com>"]

[dependencies]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]

[dependencies.futures]
version = "0.3.21"

[dependencies.warp]
version = "0.3.2"
features = ["tokio-rustls", "compression-gzip", "websocket"]

[dependencies.warp-reverse-proxy]
version = "0.5.0"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-tokio-rustls", "all-types", "postgres"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4", "serde"]

[dependencies.async-trait]
version = "0.1.53"

[dependencies.sea-query]
version = "0.24.4"
features = ["derive", "postgres-types", "postgres-uuid", "postgres-chrono"]

[dependencies.jsonwebtoken]
version = "8.1.0"

[dependencies.rust-argon2]
version = "0.8.3"

[dependencies.tracing]
version = "0.1.34"

[dependencies.tracing-subscriber]
version = "0.3.11"

[dependencies.thiserror]
version = "1.0.30"

[dependencies.anyhow]
version = "1.0.57"

[dependencies.r2d2_redis]
version = "0.14.0"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.tonic]
version = "0.7.1"

[dependencies.prost]
version = "0.10.1"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.snowflake]
git = "https://github.com/boris-lok/snowflake"
branch = "master"

[build-dependencies]
tonic-build = "0.7.0"